feat: add cli interface, downgrade java version to 8 to allow bootique-cli framework, fix some bugs
(cherry picked from commit c03e5de0bdc867c665b4acf2bcc9c1ab507cf216)